Update for open sidebar, switch accordian side, fix sizing and spacing

--- a/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
+++ b/packages/tapisui-common/src/ui/PageLayout/PageLayout.module.scss
@@ -20,7 +20,7 @@
   width: 100%;
   min-width: 0;
   flex-grow: 1;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .main {
